fidoconfig 0.9
--------------

----- cvs ci ------
Thu Aug 03 11:38:30 1999
Georgi:
+ Added "-lw <level>" and "-lr <level>" in filearea options

Mon Aug 02 18:20:50 1999
Georgi:
+ Added token BbsArea <name> <directory> "<description>"

Thu Jul 29 10:43:22 CEST 1999 	
mtt:
+ added logEchoToScreen to tparser
	
----- cvs ci ------
Sun Jul 18 15:21:25 1999
Georgi:
+ Added token passFileAreaDir (directory for Passthrough fileareas)
+ Added token Passthrough in FileArea

----- cvs ci ------
Sat Jul 10 17:08:44 CEST 1999
mtt:
* changed void main to int main (fecfg2fconf.c) 
* futher work on dump.c

----- cvs ci ------
Sat Jul 10 00:11:58 CEST 1999
mtt:
+ started working on that dumpConfig code (quite boring :-( )

----- cvs ci ------
Mon Jun 28  16:43:00
Fedor:
+ Added compiling fecfg2fconf (fastecho.cfg -> fidoconfig) for Linux

----- cvs ci ------
Sun Jun 27  15:02:00
Fedor:
+ Added copy_file() function in common.c
* Fixed problem with compiling for OS/2 and Watcom

----- cvs ci ------
Thu Jun 24 17:24:42 CEST 1999
mtt:
* fixed tparser while displaying forwardPkts 

----- cvs ci ------
Tue Jun 22 22:10:45 CEST 1999
mtt:
* version number updated
	
----- cvs ci ------
Thu Jun 17 12:38:26 NOVST 1999
max:
+ add tokens defArcmailSize and arcmailSize

----- cvs ci ------
Wed Jun  16 18:20:00
Fedor:
* change token AutoCreateFile to AutoAreaCreateFile (from link)
+ added token AutoFileCreateFile 
* change token AutoCreateDefaults to AutoAreaCreateDefaults
* moved global AutoFileCreateDefaults to link
  Do it for used htick in future

----- cvs ci ------
Tue Jun  8 20:53:03
Fedor:
+ added token AutoPause for links

fidoconfig 0.8
(released on Mon Jun  7 22:37:09 CEST 1999)
--------------

----- cvs ci ------
Mon Jun  7 20:43:29 CEST 1999
mtt:
* fixed some null-pointer issues.

----- cvs ci ------
Sun May 30 22:26:26 CEST 1999	
mtt:
* fixed a bug in (2)

----- cvs ci ------
Sun May 23  18:50:01
Fedor:
+ added tokens RemoteRobotName - Areafix (default) or another