@@ -2,6 +2,11 @@ fidoconfig 0.9
 --------------
 
 ----- cvs ci ------
+Mon Aug  9 15:34:24 NOVST 1999
+max:
++ added token for Hash Dupes by Oleg Zrozhevsky 
+
+----- cvs ci ------
 Thu Aug 03 11:38:30 1999
 Georgi:
 + Added "-lw <level>" and "-lr <level>" in filearea options
